2010-05-05  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/search.c, src/search.h, src/document.c, doc/geany.txt,
   doc/geany.html:
   Fix replacing {filename} template wildcard for custom file
   templates with non-default file extension.
   Add search_find_text() for POSIX regex searches.
 * src/templates.c, doc/geany.txt, doc/geany.html:
   Add {project}, {description} template wildcards (#2954737).
 * doc/geany.txt, doc/geany.html:
   Divide template wildcards into groups.
 * src/plugindata.h, src/plugins.c, src/symbols.c,
   plugins/geanyfunctions.h:
   Add symbols_get_context_separator() to plugin API (patch by Colomban
   Wendling, thanks).


2010-05-03  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/keybindings.c:
   Fix setting wrong accelerator for 2 Edit->Commands items (patch by
   Anonymous, thanks; #2995593).
 * src/sciwrappers.c, src/plugindata.h, src/plugins.c,
   plugins/geanyfunctions.h:
   Add sci_set_line_indentation(), sci_get_line_indentation() to API
   (patch by Colomban Wendling, thanks).


2010-04-30  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/editor.c:
   Warn user if hidden hard tab width setting is not 8.


2010-04-28  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/interface.c, src/project.c, src/keyfile.c, geany.glade,
   doc/geany.txt, doc/geany.html:
   Hide 'Tabs and Spaces: Hard tab width' preference - it should
   always be 8. (Hidden setting kept in case users have modified it).


2010-04-28  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * doc/geany.txt, doc/geany.html:
   Add Folding section link to filetypes.common custom settings.


2010-04-27  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/callbacks.c:
   When switching documents, don't call document_set_text_changed()
   as this does much more than necessary. Instead call the necessary
   UI update functions explicitly.

